---
source: crates/pipeline-tests/tests/runner.rs
expression: parse_snap
---
id: tests/snippets/invalid/statements/measure.qasm
expect-parse: Diag
--- parser ---
ok: false
panicked: false
errors: 12
--- ast ---
SOURCE_FILE@0..234: 
measure $0, $1;
a[0:1] = measure $0, $1;
a = measure $0 -> b;
creg a[1] = measure $0;
measure $0 -> creg a[1];
measure $0 -> bit[1] a;
// Measure can't be used in sub-expressions.
a = 2 * measure $0;
a = (measure $0) + (measure $1);

EXPR_STMT@1..11: measure $0
MEASURE_EXPRESSION@1..11: measure $0
HARDWARE_QUBIT@9..11: $0
ERROR@11..12: ,
EXPR_STMT@13..16: $1;
HARDWARE_QUBIT@13..15: $1
ASSIGNMENT_STMT@17..36: a[0:1] = measure $0
INDEXED_IDENTIFIER@17..23: a[0:1]
IDENTIFIER@17..18: a
INDEX_OPERATOR@18..23: [0:1]
EXPRESSION_LIST@19..22: 0:1
RANGE_EXPR@19..22: 0:1
LITERAL@19..20: 0
LITERAL@21..22: 1
MEASURE_EXPRESSION@26..36: measure $0
HARDWARE_QUBIT@34..36: $0
ERROR@36..37: ,
EXPR_STMT@38..41: $1;
HARDWARE_QUBIT@38..40: $1
ASSIGNMENT_STMT@42..59: a = measure $0 ->
IDENTIFIER@42..43: a
BIN_EXPR@46..59: measure $0 ->
MEASURE_EXPRESSION@46..56: measure $0
HARDWARE_QUBIT@54..56: $0
ERROR@58..59: >
EXPR_STMT@60..62: b;
IDENTIFIER@60..61: b
OLD_STYLE_DECLARATION_STATEMENT@63..72: creg a[1]
OLD_TYPED_PARAM@63..72: creg a[1]
INDEX_OPERATOR@69..72: [1]
EXPRESSION_LIST@70..71: 1
LITERAL@70..71: 1
ERROR@73..74: =
EXPR_STMT@75..86: measure $0;
MEASURE_EXPRESSION@75..85: measure $0
HARDWARE_QUBIT@83..85: $0
EXPR_STMT@87..100: measure $0 ->
BIN_EXPR@87..100: measure $0 ->
MEASURE_EXPRESSION@87..97: measure $0
HARDWARE_QUBIT@95..97: $0
ERROR@99..100: >
OLD_STYLE_DECLARATION_STATEMENT@101..111: creg a[1];
OLD_TYPED_PARAM@101..110: creg a[1]
INDEX_OPERATOR@107..110: [1]
EXPRESSION_LIST@108..109: 1
LITERAL@108..109: 1
EXPR_STMT@112..125: measure $0 ->
BIN_EXPR@112..125: measure $0 ->
MEASURE_EXPRESSION@112..122: measure $0
HARDWARE_QUBIT@120..122: $0
ERROR@124..125: >
CLASSICAL_DECLARATION_STATEMENT@126..135: bit[1] a;
SCALAR_TYPE@126..132: bit[1]
DESIGNATOR@129..132: [1]
LITERAL@130..131: 1
NAME@133..134: a
ASSIGNMENT_STMT@181..200: a = 2 * measure $0;
IDENTIFIER@181..182: a
BIN_EXPR@185..199: 2 * measure $0
LITERAL@185..186: 2
MEASURE_EXPRESSION@189..199: measure $0
HARDWARE_QUBIT@197..199: $0
ASSIGNMENT_STMT@201..233: a = (measure $0) + (measure $1);
IDENTIFIER@201..202: a
BIN_EXPR@205..232: (measure $0) + (measure $1)
PAREN_EXPR@205..217: (measure $0)
MEASURE_EXPRESSION@206..216: measure $0
HARDWARE_QUBIT@214..216: $0
PAREN_EXPR@220..232: (measure $1)
MEASURE_EXPRESSION@221..231: measure $1
HARDWARE_QUBIT@229..231: $1
